[package]
name = "oes"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["server"]
server = []
conversion = [
  "frunk",
  "frunk_derives",
  "frunk_core",
  "frunk-enum-core",
  "frunk-enum-derive",
]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "candle-examples/cuda"]

[lib]
name = "oes"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
async-trait = "0.1.80"
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
base64 = "0.21"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
frunk = { version = "0.4", optional = true }
frunk-enum-core = { version = "0.3", optional = true }
frunk-enum-derive = { version = "0.3", optional = true }
frunk_core = { version = "0.4", optional = true }
frunk_derives = { version = "0.4", optional = true }
http = "1"
lazy_static = "1"
regex = "1"
config = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_urlencoded = "0.7"
tracing = { version = "0.1", features = ["attributes"] }
uuid = { version = "1", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = [
  "signal",
  "rt-multi-thread",
] }
bus = "2.4.1"
tracing-subscriber = "0.3.18"
tokenizers = "0.19.1"
anyhow = "1.0.86"
candle-core = { version = "0.5.1", features = [] }
candle-nn = { version = "0.5.1", features = [] }
candle-transformers = { version = "0.5.1", features = [] }
candle-examples = { version = "0.5.1", features = [] }
image = "0.25.1"
hf-hub = "0.3.2"
num_cpus = "1.16.0"
url = "2.5.0"
tower-http = { version = "0.5.2", features = ["full"] }
data-url = "0.3.1"
crossfire = "1.0.1"
flume = "0.11.0"
dashmap = "5.5.3"
futures = "0.3.30"
futures-core = "0.3.30"
flurry = "0.5.1"
rand = "0.8.5"
strum = "0.26.2"
strum_macros = "0.26.2"
include_dir = "0.7.4"
symphonia = "0.5.4"
byteorder = "1.5.0"
tabled = "0.15.0"
itertools = "0.13.0"
